# elastic_bridge

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  package.xml
evaluation/: config.yaml  generate_pose_txt_files.py
include/: download_pc2_action.h  elastic_bridge.h
launch/: elastic_bridge.launch  elastic_bridge_k1.launch  elastic_bridge_realsense.launch  elastic_bridge_zedm.launch
src/: download_pc2_action.cpp  elastic_node.cpp  save_pcl.cpp
srv/: Suspend.srv
